--- a/temp.ipynb
+++ b/temp.ipynb
@@ -20,14 +20,12 @@
     "    header_template_range,\n",
     "    subheader_template_range,\n",
     "    header_subheader_dict,\n",
-    "    start_col,  # e.g., \"AN\"\n",
-    "    header_row=3,\n",
-    "    text_row=5\n",
+    "    start_col,\n",
+    "    header_row=3\n",
     "):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[sheet_name]\n",
     "\n",
-    "    # --- Parse ranges ---\n",
     "    h_start_col, h_end_col = header_template_range\n",
     "    s_start_col, s_end_col = subheader_template_range\n",
     "\n",
@@ -42,13 +40,13 @@
     "    current_col_idx = column_index_from_string(start_col)\n",
     "\n",
     "    for header, subheaders in header_subheader_dict.items():\n",
-    "        print(f\"🔷 Processing Header: {header}\")\n",
+    "        print(f\"🔷 Header: {header}\")\n",
     "\n",
     "        for subheader in subheaders:\n",
     "            if subheader == header:\n",
-    "                continue  # skip redundant, handle header block below\n",
+    "                continue  # skip redundant\n",
     "\n",
-    "            print(f\"   ➜ Adding Subheader Block: {subheader} at {get_column_letter(current_col_idx)}\")\n",
+    "            print(f\"   ➜ Subheader Block: {subheader} at {get_column_letter(current_col_idx)}\")\n",
     "\n",
     "            # Copy subheader block\n",
     "            for row in ws.iter_rows(\n",
@@ -58,8 +56,8 @@
     "                max_row=ws.max_row\n",
     "            ):\n",
     "                for i, src_cell in enumerate(row):\n",
-    "                    new_col = current_col_idx + i\n",
-    "                    tgt_cell = ws.cell(row=src_cell.row, column=new_col)\n",
+    "                    tgt_col = current_col_idx + i\n",
+    "                    tgt_cell = ws.cell(row=src_cell.row, column=tgt_col)\n",
     "\n",
     "                    if src_cell.data_type == 'f':\n",
     "                        tgt_cell.value = Translator(src_cell.value, src_cell.coordinate).translate_formula(tgt_cell.coordinate)\n",
@@ -73,24 +71,25 @@
     "                    tgt_cell.protection = copy.copy(src_cell.protection)\n",
     "                    tgt_cell.alignment = copy.copy(src_cell.alignment)\n",
     "\n",
-    "            # Merge and fill header row for subheader block\n",
+    "            # Merge header row\n",
     "            merge_start = get_column_letter(current_col_idx)\n",
     "            merge_end = get_column_letter(current_col_idx + num_cols_s - 1)\n",
     "            merge_range = f\"{merge_start}{header_row}:{merge_end}{header_row}\"\n",
     "\n",
     "            for merge in list(ws.merged_cells.ranges):\n",
-    "                if CellRange(merge_range).coord in merge.coord:\n",
+    "                if merge_range in str(merge):\n",
     "                    ws.merged_cells.ranges.remove(merge)\n",
     "\n",
     "            ws.merge_cells(merge_range)\n",
     "            ws[f\"{merge_start}{header_row}\"] = subheader\n",
     "\n",
-    "            # Fill next row with subheader name\n",
+    "            # Fill entire row below merged header\n",
     "            for i in range(num_cols_s):\n",
-    "                cell = ws.cell(row=header_row + 1, column=current_col_idx + i)\n",
+    "                col_letter = get_column_letter(current_col_idx + i)\n",
+    "                cell = ws[f\"{col_letter}{header_row + 1}\"]\n",
     "                cell.value = subheader\n",
     "\n",
-    "                src_cell = ws.cell(row=header_row + 1, column=s_start_idx + i)\n",
+    "                src_cell = ws[f\"{get_column_letter(s_start_idx + i)}{header_row + 1}\"]\n",
     "                cell.font = copy.copy(src_cell.font)\n",
     "                cell.border = copy.copy(src_cell.border)\n",
     "                cell.fill = copy.copy(src_cell.fill)\n",
@@ -98,9 +97,9 @@
     "                cell.protection = copy.copy(src_cell.protection)\n",
     "                cell.alignment = copy.copy(src_cell.alignment)\n",
     "\n",
-    "            current_col_idx += num_cols_s + 1  # advance\n",
+    "            current_col_idx += num_cols_s + 1\n",
     "\n",
-    "        print(f\"✅ Adding Header Block: {header} at {get_column_letter(current_col_idx)}\")\n",
+    "        print(f\"✅ Header Block: {header} at {get_column_letter(current_col_idx)}\")\n",
     "\n",
     "        # Copy header block\n",
     "        for row in ws.iter_rows(\n",
@@ -110,8 +109,8 @@
     "            max_row=ws.max_row\n",
     "        ):\n",
     "            for i, src_cell in enumerate(row):\n",
-    "                new_col = current_col_idx + i\n",
-    "                tgt_cell = ws.cell(row=src_cell.row, column=new_col)\n",
+    "                tgt_col = current_col_idx + i\n",
+    "                tgt_cell = ws.cell(row=src_cell.row, column=tgt_col)\n",
     "\n",
     "                if src_cell.data_type == 'f':\n",
     "                    tgt_cell.value = Translator(src_cell.value, src_cell.coordinate).translate_formula(tgt_cell.coordinate)\n",
@@ -125,24 +124,25 @@
     "                tgt_cell.protection = copy.copy(src_cell.protection)\n",
     "                tgt_cell.alignment = copy.copy(src_cell.alignment)\n",
     "\n",
-    "        # Merge and fill header row for header block\n",
+    "        # Merge header row for header block\n",
     "        merge_start = get_column_letter(current_col_idx)\n",
     "        merge_end = get_column_letter(current_col_idx + num_cols_h - 1)\n",
     "        merge_range = f\"{merge_start}{header_row}:{merge_end}{header_row}\"\n",
     "\n",
     "        for merge in list(ws.merged_cells.ranges):\n",
-    "            if CellRange(merge_range).coord in merge.coord:\n",
+    "            if merge_range in str(merge):\n",
     "                ws.merged_cells.ranges.remove(merge)\n",
     "\n",
     "        ws.merge_cells(merge_range)\n",
     "        ws[f\"{merge_start}{header_row}\"] = header\n",
     "\n",
-    "        # Fill next row with header name\n",
+    "        # Fill entire row below merged header with header name\n",
     "        for i in range(num_cols_h):\n",
-    "            cell = ws.cell(row=header_row + 1, column=current_col_idx + i)\n",
+    "            col_letter = get_column_letter(current_col_idx + i)\n",
+    "            cell = ws[f\"{col_letter}{header_row + 1}\"]\n",
     "            cell.value = header\n",
     "\n",
-    "            src_cell = ws.cell(row=header_row + 1, column=h_start_idx + i)\n",
+    "            src_cell = ws[f\"{get_column_letter(h_start_idx + i)}{header_row + 1}\"]\n",
     "            cell.font = copy.copy(src_cell.font)\n",
     "            cell.border = copy.copy(src_cell.border)\n",
     "            cell.fill = copy.copy(src_cell.fill)\n",
@@ -154,15 +154,16 @@
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "    print(\"✅✅ All header and subheader blocks done!\")\n",
+    "    print(\"✅✅ All done, with full row 4 fill + safe header block replication!\")\n",
     "\n",
     "\n",
-    "# --- EXAMPLE USAGE ---\n",
+    "\n",
+    "# Example usage\n",
     "if __name__ == \"__main__\":\n",
     "    my_dict = OrderedDict({\n",
     "        \"Paris\": [\"Paris\", \"Louvre\"],\n",
-    "        \"Hongkong\": [\"HK Island\", \"Kowloon\", \"Hongkong\"],\n",
-    "        \"India\": [\"Delhi\", \"Mumbai\", \"India\"]\n",
+    "        \"Hongkong\": [\"Hongkong\", \"Kowloon\"],\n",
+    "        \"India\": [\"India\"]\n",
     "    })\n",
     "\n",
     "    replicate_blocks_with_headers_subheaders(\n",
@@ -171,9 +172,7 @@
     "        header_template_range=(\"V\", \"AC\"),\n",
     "        subheader_template_range=(\"AE\", \"AL\"),\n",
     "        header_subheader_dict=my_dict,\n",
-    "        start_col=\"AN\",\n",
-    "        header_row=3,\n",
-    "        text_row=5\n",
+    "        start_col=\"AN\"\n",
     "    )\n"
    ]
   },
