--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,13 +8,36 @@
    "source": [
     "from openpyxl import load_workbook\n",
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
-    "from openpyxl.worksheet.cell_range import CellRange\n",
     "from openpyxl.formula.translate import Translator\n",
     "from collections import OrderedDict\n",
     "import copy\n",
     "\n",
     "\n",
-    "def replicate_blocks_with_headers_subheaders(\n",
+    "def extract_block(ws, start_col, end_col):\n",
+    "    \"\"\"Grab a block into memory: rows x cols matrix\"\"\"\n",
+    "    s_idx = column_index_from_string(start_col)\n",
+    "    e_idx = column_index_from_string(end_col)\n",
+    "    rows = []\n",
+    "\n",
+    "    for row in ws.iter_rows(min_col=s_idx, max_col=e_idx, min_row=1, max_row=ws.max_row):\n",
+    "        row_data = []\n",
+    "        for cell in row:\n",
+    "            row_data.append({\n",
+    "                \"value\": cell.value,\n",
+    "                \"data_type\": cell.data_type,\n",
+    "                \"coordinate\": cell.coordinate,\n",
+    "                \"font\": copy.copy(cell.font),\n",
+    "                \"border\": copy.copy(cell.border),\n",
+    "                \"fill\": copy.copy(cell.fill),\n",
+    "                \"number_format\": copy.copy(cell.number_format),\n",
+    "                \"protection\": copy.copy(cell.protection),\n",
+    "                \"alignment\": copy.copy(cell.alignment)\n",
+    "            })\n",
+    "        rows.append(row_data)\n",
+    "    return rows\n",
+    "\n",
+    "\n",
+    "def replicate_blocks_safely(\n",
     "    file_path,\n",
     "    sheet_name,\n",
     "    header_template_range,\n",
@@ -25,6 +48,10 @@
     "):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[sheet_name]\n",
+    "\n",
+    "    # Load templates once → safe!\n",
+    "    header_template = extract_block(ws, *header_template_range)\n",
+    "    subheader_template = extract_block(ws, *subheader_template_range)\n",
     "\n",
     "    h_start_col, h_end_col = header_template_range\n",
     "    s_start_col, s_end_col = subheader_template_range\n",
@@ -44,134 +71,91 @@
     "\n",
     "        for subheader in subheaders:\n",
     "            if subheader == header:\n",
-    "                continue  # skip redundant\n",
+    "                continue  # only place header block later\n",
     "\n",
-    "            print(f\"   ➜ Subheader Block: {subheader} at {get_column_letter(current_col_idx)}\")\n",
+    "            print(f\"   ➜ Subheader: {subheader} at {get_column_letter(current_col_idx)}\")\n",
     "\n",
-    "            # Copy subheader block\n",
-    "            for row in ws.iter_rows(\n",
-    "                min_col=s_start_idx,\n",
-    "                max_col=s_end_idx,\n",
-    "                min_row=1,\n",
-    "                max_row=ws.max_row\n",
-    "            ):\n",
-    "                for i, src_cell in enumerate(row):\n",
-    "                    tgt_col = current_col_idx + i\n",
-    "                    tgt_cell = ws.cell(row=src_cell.row, column=tgt_col)\n",
+    "            # Place subheader block\n",
+    "            for r_idx, row in enumerate(subheader_template, start=1):\n",
+    "                for c_idx, cell_data in enumerate(row):\n",
+    "                    tgt_col = current_col_idx + c_idx\n",
+    "                    tgt_cell = ws.cell(row=r_idx, column=tgt_col)\n",
     "\n",
-    "                    if src_cell.data_type == 'f':\n",
-    "                        tgt_cell.value = Translator(src_cell.value, src_cell.coordinate).translate_formula(tgt_cell.coordinate)\n",
+    "                    if cell_data[\"data_type\"] == 'f' and cell_data[\"value\"]:\n",
+    "                        tgt_cell.value = Translator(cell_data[\"value\"], cell_data[\"coordinate\"]).translate_formula(tgt_cell.coordinate)\n",
     "                    else:\n",
-    "                        tgt_cell.value = src_cell.value\n",
+    "                        tgt_cell.value = cell_data[\"value\"]\n",
     "\n",
-    "                    tgt_cell.font = copy.copy(src_cell.font)\n",
-    "                    tgt_cell.border = copy.copy(src_cell.border)\n",
-    "                    tgt_cell.fill = copy.copy(src_cell.fill)\n",
-    "                    tgt_cell.number_format = copy.copy(src_cell.number_format)\n",
-    "                    tgt_cell.protection = copy.copy(src_cell.protection)\n",
-    "                    tgt_cell.alignment = copy.copy(src_cell.alignment)\n",
+    "                    tgt_cell.font = copy.copy(cell_data[\"font\"])\n",
+    "                    tgt_cell.border = copy.copy(cell_data[\"border\"])\n",
+    "                    tgt_cell.fill = copy.copy(cell_data[\"fill\"])\n",
+    "                    tgt_cell.number_format = copy.copy(cell_data[\"number_format\"])\n",
+    "                    tgt_cell.protection = copy.copy(cell_data[\"protection\"])\n",
+    "                    tgt_cell.alignment = copy.copy(cell_data[\"alignment\"])\n",
     "\n",
-    "            # Merge header row\n",
+    "            # Merge + header row\n",
     "            merge_start = get_column_letter(current_col_idx)\n",
     "            merge_end = get_column_letter(current_col_idx + num_cols_s - 1)\n",
-    "            merge_range = f\"{merge_start}{header_row}:{merge_end}{header_row}\"\n",
-    "\n",
-    "            for merge in list(ws.merged_cells.ranges):\n",
-    "                if merge_range in str(merge):\n",
-    "                    ws.merged_cells.ranges.remove(merge)\n",
-    "\n",
-    "            ws.merge_cells(merge_range)\n",
+    "            ws.merge_cells(f\"{merge_start}{header_row}:{merge_end}{header_row}\")\n",
     "            ws[f\"{merge_start}{header_row}\"] = subheader\n",
     "\n",
-    "            # Fill entire row below merged header\n",
+    "            # Fill row 4\n",
     "            for i in range(num_cols_s):\n",
     "                col_letter = get_column_letter(current_col_idx + i)\n",
-    "                cell = ws[f\"{col_letter}{header_row + 1}\"]\n",
-    "                cell.value = subheader\n",
-    "\n",
-    "                src_cell = ws[f\"{get_column_letter(s_start_idx + i)}{header_row + 1}\"]\n",
-    "                cell.font = copy.copy(src_cell.font)\n",
-    "                cell.border = copy.copy(src_cell.border)\n",
-    "                cell.fill = copy.copy(src_cell.fill)\n",
-    "                cell.number_format = copy.copy(src_cell.number_format)\n",
-    "                cell.protection = copy.copy(src_cell.protection)\n",
-    "                cell.alignment = copy.copy(src_cell.alignment)\n",
+    "                ws[f\"{col_letter}{header_row + 1}\"] = subheader\n",
     "\n",
     "            current_col_idx += num_cols_s + 1\n",
     "\n",
+    "        # Now the header block itself\n",
     "        print(f\"✅ Header Block: {header} at {get_column_letter(current_col_idx)}\")\n",
     "\n",
-    "        # Copy header block\n",
-    "        for row in ws.iter_rows(\n",
-    "            min_col=h_start_idx,\n",
-    "            max_col=h_end_idx,\n",
-    "            min_row=1,\n",
-    "            max_row=ws.max_row\n",
-    "        ):\n",
-    "            for i, src_cell in enumerate(row):\n",
-    "                tgt_col = current_col_idx + i\n",
-    "                tgt_cell = ws.cell(row=src_cell.row, column=tgt_col)\n",
+    "        for r_idx, row in enumerate(header_template, start=1):\n",
+    "            for c_idx, cell_data in enumerate(row):\n",
+    "                tgt_col = current_col_idx + c_idx\n",
+    "                tgt_cell = ws.cell(row=r_idx, column=tgt_col)\n",
     "\n",
-    "                if src_cell.data_type == 'f':\n",
-    "                    tgt_cell.value = Translator(src_cell.value, src_cell.coordinate).translate_formula(tgt_cell.coordinate)\n",
+    "                if cell_data[\"data_type\"] == 'f' and cell_data[\"value\"]:\n",
+    "                    tgt_cell.value = Translator(cell_data[\"value\"], cell_data[\"coordinate\"]).translate_formula(tgt_cell.coordinate)\n",
     "                else:\n",
-    "                    tgt_cell.value = src_cell.value\n",
+    "                    tgt_cell.value = cell_data[\"value\"]\n",
     "\n",
-    "                tgt_cell.font = copy.copy(src_cell.font)\n",
-    "                tgt_cell.border = copy.copy(src_cell.border)\n",
-    "                tgt_cell.fill = copy.copy(src_cell.fill)\n",
-    "                tgt_cell.number_format = copy.copy(src_cell.number_format)\n",
-    "                tgt_cell.protection = copy.copy(src_cell.protection)\n",
-    "                tgt_cell.alignment = copy.copy(src_cell.alignment)\n",
+    "                tgt_cell.font = copy.copy(cell_data[\"font\"])\n",
+    "                tgt_cell.border = copy.copy(cell_data[\"border\"])\n",
+    "                tgt_cell.fill = copy.copy(cell_data[\"fill\"])\n",
+    "                tgt_cell.number_format = copy.copy(cell_data[\"number_format\"])\n",
+    "                tgt_cell.protection = copy.copy(cell_data[\"protection\"])\n",
+    "                tgt_cell.alignment = copy.copy(cell_data[\"alignment\"])\n",
     "\n",
-    "        # Merge header row for header block\n",
     "        merge_start = get_column_letter(current_col_idx)\n",
     "        merge_end = get_column_letter(current_col_idx + num_cols_h - 1)\n",
-    "        merge_range = f\"{merge_start}{header_row}:{merge_end}{header_row}\"\n",
-    "\n",
-    "        for merge in list(ws.merged_cells.ranges):\n",
-    "            if merge_range in str(merge):\n",
-    "                ws.merged_cells.ranges.remove(merge)\n",
-    "\n",
-    "        ws.merge_cells(merge_range)\n",
+    "        ws.merge_cells(f\"{merge_start}{header_row}:{merge_end}{header_row}\")\n",
     "        ws[f\"{merge_start}{header_row}\"] = header\n",
     "\n",
-    "        # Fill entire row below merged header with header name\n",
+    "        # Fill row 4\n",
     "        for i in range(num_cols_h):\n",
     "            col_letter = get_column_letter(current_col_idx + i)\n",
-    "            cell = ws[f\"{col_letter}{header_row + 1}\"]\n",
-    "            cell.value = header\n",
-    "\n",
-    "            src_cell = ws[f\"{get_column_letter(h_start_idx + i)}{header_row + 1}\"]\n",
-    "            cell.font = copy.copy(src_cell.font)\n",
-    "            cell.border = copy.copy(src_cell.border)\n",
-    "            cell.fill = copy.copy(src_cell.fill)\n",
-    "            cell.number_format = copy.copy(src_cell.number_format)\n",
-    "            cell.protection = copy.copy(src_cell.protection)\n",
-    "            cell.alignment = copy.copy(src_cell.alignment)\n",
+    "            ws[f\"{col_letter}{header_row + 1}\"] = header\n",
     "\n",
     "        current_col_idx += num_cols_h + 1\n",
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "    print(\"✅✅ All done, with full row 4 fill + safe header block replication!\")\n",
+    "    print(\"✅✅ Finished! No overwrite. Blocks placed safely.\")\n",
     "\n",
     "\n",
-    "\n",
-    "# Example usage\n",
     "if __name__ == \"__main__\":\n",
-    "    my_dict = OrderedDict({\n",
+    "    my_blocks = OrderedDict({\n",
     "        \"Paris\": [\"Paris\", \"Louvre\"],\n",
     "        \"Hongkong\": [\"Hongkong\", \"Kowloon\"],\n",
     "        \"India\": [\"India\"]\n",
     "    })\n",
     "\n",
-    "    replicate_blocks_with_headers_subheaders(\n",
+    "    replicate_blocks_safely(\n",
     "        file_path=\"your_dashboard.xlsx\",\n",
     "        sheet_name=\"Dashboard\",\n",
     "        header_template_range=(\"V\", \"AC\"),\n",
     "        subheader_template_range=(\"AE\", \"AL\"),\n",
-    "        header_subheader_dict=my_dict,\n",
+    "        header_subheader_dict=my_blocks,\n",
     "        start_col=\"AN\"\n",
     "    )\n"
    ]
