--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,235 +6,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openpyxl import load_workbook\n",
-    "from openpyxl.utils import get_column_letter, column_index_from_string\n",
-    "from openpyxl.formula.translate import Translator\n",
-    "from collections import OrderedDict\n",
-    "import copy\n",
+    "import pandas as pd\n",
     "\n",
+    "# === Step 1: User input ===\n",
+    "current_month = input(\"Enter month (e.g. M06): \")\n",
+    "base_year = 2025  # You can change this if needed\n",
+    "other_year = 2024  # You can change this too\n",
     "\n",
-    "def extract_block(ws, start_col, end_col):\n",
-    "    \"\"\"Grab a block into memory: rows x cols matrix\"\"\"\n",
-    "    s_idx = column_index_from_string(start_col)\n",
-    "    e_idx = column_index_from_string(end_col)\n",
-    "    rows = []\n",
+    "# === Step 2: Read the Excel file ===\n",
+    "input_file = \"your_input_file.xlsx\"  # Replace with your actual input file\n",
+    "xls = pd.ExcelFile(input_file)\n",
     "\n",
-    "    for row in ws.iter_rows(min_col=s_idx, max_col=e_idx, min_row=1, max_row=ws.max_row):\n",
-    "        row_data = []\n",
-    "        for cell in row:\n",
-    "            row_data.append({\n",
-    "                \"value\": cell.value,\n",
-    "                \"data_type\": cell.data_type,\n",
-    "                \"coordinate\": cell.coordinate,\n",
-    "                \"font\": copy.copy(cell.font),\n",
-    "                \"border\": copy.copy(cell.border),\n",
-    "                \"fill\": copy.copy(cell.fill),\n",
-    "                \"number_format\": copy.copy(cell.number_format),\n",
-    "                \"protection\": copy.copy(cell.protection),\n",
-    "                \"alignment\": copy.copy(cell.alignment)\n",
-    "            })\n",
-    "        rows.append(row_data)\n",
-    "    return rows\n",
+    "# Pick sheets to process\n",
+    "sheets_to_process = [\"Sheet1\", \"Sheet2\"]  # Replace with actual sheet names\n",
+    "sheets_to_copy = [s for s in xls.sheet_names if s not in sheets_to_process]\n",
     "\n",
+    "output_sheets = {}\n",
     "\n",
-    "def replicate_blocks_safely(\n",
-    "    file_path,\n",
-    "    sheet_name,\n",
-    "    header_template_range,\n",
-    "    subheader_template_range,\n",
-    "    header_subheader_dict,\n",
-    "    start_col,\n",
-    "    header_row=3\n",
-    "):\n",
-    "    wb = load_workbook(file_path)\n",
-    "    ws = wb[sheet_name]\n",
+    "# === Step 3: Process each sheet ===\n",
+    "for sheet in sheets_to_process:\n",
+    "    print(f\"Processing sheet: {sheet}\")\n",
     "\n",
-    "    # Load templates once → safe!\n",
-    "    header_template = extract_block(ws, *header_template_range)\n",
-    "    subheader_template = extract_block(ws, *subheader_template_range)\n",
+    "    df = pd.read_excel(xls, sheet_name=sheet)\n",
     "\n",
-    "    h_start_col, h_end_col = header_template_range\n",
-    "    s_start_col, s_end_col = subheader_template_range\n",
+    "    # Filter base year and other year\n",
+    "    df_base = df[df['Year'] == base_year].copy()\n",
+    "    df_other = df[df['Year'] == other_year].copy()\n",
     "\n",
-    "    h_start_idx = column_index_from_string(h_start_col)\n",
-    "    h_end_idx = column_index_from_string(h_end_col)\n",
-    "    s_start_idx = column_index_from_string(s_start_col)\n",
-    "    s_end_idx = column_index_from_string(s_end_col)\n",
+    "    # Select needed columns\n",
+    "    base_cols = ['Account', 'Entity', 'Level 4', 'YTD'] + [f\"M{str(i).zfill(2)}\" for i in range(1, 13)]\n",
+    "    other_cols = ['Account', 'Entity', 'Level 4', 'YTD', current_month]\n",
     "\n",
-    "    num_cols_h = h_end_idx - h_start_idx + 1\n",
-    "    num_cols_s = s_end_idx - s_start_idx + 1\n",
+    "    df_base = df_base[['Account', 'Entity', 'Level 4'] + base_cols[3:]]\n",
+    "    df_other = df_other[['Account', 'Entity', 'Level 4'] + other_cols[3:]]\n",
     "\n",
-    "    current_col_idx = column_index_from_string(start_col)\n",
+    "    # Aggregate if duplicates exist\n",
+    "    df_base = df_base.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
+    "    df_other = df_other.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
     "\n",
-    "    for header, subheaders in header_subheader_dict.items():\n",
-    "        print(f\"🔷 Header: {header}\")\n",
+    "    # Merge on composite key\n",
+    "    df_merged = pd.merge(df_base, df_other, on=['Account', 'Entity', 'Level 4'], how='outer', suffixes=('', f'_{other_year}'))\n",
     "\n",
-    "        for subheader in subheaders:\n",
-    "            if subheader == header:\n",
-    "                continue  # only place header block later\n",
+    "    # Fill missing with 0\n",
+    "    df_merged.fillna(0, inplace=True)\n",
     "\n",
-    "            print(f\"   ➜ Subheader: {subheader} at {get_column_letter(current_col_idx)}\")\n",
+    "    # Build columns for final order\n",
+    "    final_cols = ['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD', current_month]\n",
+    "    df_final = df_merged[['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD_' + str(other_year), f\"{current_month}_{other_year}\"]]\n",
     "\n",
-    "            # Place subheader block\n",
-    "            for r_idx, row in enumerate(subheader_template, start=1):\n",
-    "                for c_idx, cell_data in enumerate(row):\n",
-    "                    tgt_col = current_col_idx + c_idx\n",
-    "                    tgt_cell = ws.cell(row=r_idx, column=tgt_col)\n",
+    "    # Rename merged other year columns to remove suffix\n",
+    "    df_final.rename(\n",
+    "        columns={f'YTD_{other_year}': 'YTD12', f\"{current_month}_{other_year}\": current_month},\n",
+    "        inplace=True\n",
+    "    )\n",
     "\n",
-    "                    if cell_data[\"data_type\"] == 'f' and cell_data[\"value\"]:\n",
-    "                        tgt_cell.value = Translator(cell_data[\"value\"], cell_data[\"coordinate\"]).translate_formula(tgt_cell.coordinate)\n",
-    "                    else:\n",
-    "                        tgt_cell.value = cell_data[\"value\"]\n",
+    "    # === Build multi-row header ===\n",
+    "    year_row = (\n",
+    "        [''] * 3\n",
+    "        + [str(base_year)] * len(base_cols[3:])\n",
+    "        + [str(other_year)] * 2\n",
+    "    )\n",
+    "    header_row = ['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD12', current_month]\n",
     "\n",
-    "                    tgt_cell.font = copy.copy(cell_data[\"font\"])\n",
-    "                    tgt_cell.border = copy.copy(cell_data[\"border\"])\n",
-    "                    tgt_cell.fill = copy.copy(cell_data[\"fill\"])\n",
-    "                    tgt_cell.number_format = copy.copy(cell_data[\"number_format\"])\n",
-    "                    tgt_cell.protection = copy.copy(cell_data[\"protection\"])\n",
-    "                    tgt_cell.alignment = copy.copy(cell_data[\"alignment\"])\n",
+    "    # Insert year row as first row\n",
+    "    df_final.columns = header_row\n",
+    "    df_final.loc[-1] = year_row  # add year row at index -1\n",
+    "    df_final.index = df_final.index + 1  # shift index\n",
+    "    df_final = df_final.sort_index()  # re-sort\n",
     "\n",
-    "            # Merge + header row\n",
-    "            merge_start = get_column_letter(current_col_idx)\n",
-    "            merge_end = get_column_letter(current_col_idx + num_cols_s - 1)\n",
-    "            ws.merge_cells(f\"{merge_start}{header_row}:{merge_end}{header_row}\")\n",
-    "            ws[f\"{merge_start}{header_row}\"] = subheader\n",
+    "    # Save to dict to write later\n",
+    "    output_sheets[sheet] = df_final\n",
     "\n",
-    "            # Fill row 4\n",
-    "            for i in range(num_cols_s):\n",
-    "                col_letter = get_column_letter(current_col_idx + i)\n",
-    "                ws[f\"{col_letter}{header_row + 1}\"] = subheader\n",
+    "# === Step 4: Copy unprocessed sheets ===\n",
+    "for sheet in sheets_to_copy:\n",
+    "    print(f\"Copying sheet as-is: {sheet}\")\n",
+    "    df = pd.read_excel(xls, sheet_name=sheet)\n",
+    "    output_sheets[sheet] = df\n",
     "\n",
-    "            current_col_idx += num_cols_s + 1\n",
+    "# === Step 5: Write all to final output ===\n",
+    "output_file = \"Total PV.xlsx\"\n",
+    "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
+    "    for sheet_name, df in output_sheets.items():\n",
+    "        df.to_excel(writer, index=False, header=False if sheet_name in sheets_to_process else True, sheet_name=sheet_name)\n",
     "\n",
-    "        # Now the header block itself\n",
-    "        print(f\"✅ Header Block: {header} at {get_column_letter(current_col_idx)}\")\n",
-    "\n",
-    "        for r_idx, row in enumerate(header_template, start=1):\n",
-    "            for c_idx, cell_data in enumerate(row):\n",
-    "                tgt_col = current_col_idx + c_idx\n",
-    "                tgt_cell = ws.cell(row=r_idx, column=tgt_col)\n",
-    "\n",
-    "                if cell_data[\"data_type\"] == 'f' and cell_data[\"value\"]:\n",
-    "                    tgt_cell.value = Translator(cell_data[\"value\"], cell_data[\"coordinate\"]).translate_formula(tgt_cell.coordinate)\n",
-    "                else:\n",
-    "                    tgt_cell.value = cell_data[\"value\"]\n",
-    "\n",
-    "                tgt_cell.font = copy.copy(cell_data[\"font\"])\n",
-    "                tgt_cell.border = copy.copy(cell_data[\"border\"])\n",
-    "                tgt_cell.fill = copy.copy(cell_data[\"fill\"])\n",
-    "                tgt_cell.number_format = copy.copy(cell_data[\"number_format\"])\n",
-    "                tgt_cell.protection = copy.copy(cell_data[\"protection\"])\n",
-    "                tgt_cell.alignment = copy.copy(cell_data[\"alignment\"])\n",
-    "\n",
-    "        merge_start = get_column_letter(current_col_idx)\n",
-    "        merge_end = get_column_letter(current_col_idx + num_cols_h - 1)\n",
-    "        ws.merge_cells(f\"{merge_start}{header_row}:{merge_end}{header_row}\")\n",
-    "        ws[f\"{merge_start}{header_row}\"] = header\n",
-    "\n",
-    "        # Fill row 4\n",
-    "        for i in range(num_cols_h):\n",
-    "            col_letter = get_column_letter(current_col_idx + i)\n",
-    "            ws[f\"{col_letter}{header_row + 1}\"] = header\n",
-    "\n",
-    "        current_col_idx += num_cols_h + 1\n",
-    "\n",
-    "    wb.save(file_path)\n",
-    "    wb.close()\n",
-    "    print(\"✅✅ Finished! No overwrite. Blocks placed safely.\")\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    my_blocks = OrderedDict({\n",
-    "        \"Paris\": [\"Paris\", \"Louvre\"],\n",
-    "        \"Hongkong\": [\"Hongkong\", \"Kowloon\"],\n",
-    "        \"India\": [\"India\"]\n",
-    "    })\n",
-    "\n",
-    "    replicate_blocks_safely(\n",
-    "        file_path=\"your_dashboard.xlsx\",\n",
-    "        sheet_name=\"Dashboard\",\n",
-    "        header_template_range=(\"V\", \"AC\"),\n",
-    "        subheader_template_range=(\"AE\", \"AL\"),\n",
-    "        header_subheader_dict=my_blocks,\n",
-    "        start_col=\"AN\"\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xlwings as xw\n",
-    "\n",
-    "def build_dashboard_with_check_blocks(\n",
-    "    file_path,\n",
-    "    template_block_range,\n",
-    "    check_block_range,\n",
-    "    output_sheet_name,\n",
-    "    headers_order,\n",
-    "    subheaders_dict,\n",
-    "    start_col\n",
-    "):\n",
-    "    app = xw.App(visible=True)\n",
-    "    wb = app.books.open(file_path)\n",
-    "    ws = wb.sheets[output_sheet_name]\n",
-    "\n",
-    "    # Where to start pasting blocks\n",
-    "    col_ptr = start_col\n",
-    "\n",
-    "    for header in headers_order:\n",
-    "        subheaders = subheaders_dict.get(header, [])\n",
-    "\n",
-    "        # If header has subheaders, paste subheader blocks first\n",
-    "        for subheader in subheaders:\n",
-    "            template_range = ws.range(template_block_range)\n",
-    "            template_range.copy(ws.range((template_range.row, col_ptr)))\n",
-    "            print(f\"Pasted subheader block '{subheader}' at column {col_ptr}\")\n",
-    "            col_ptr += template_range.columns.count + 1  # +1 for spacing\n",
-    "\n",
-    "        # Then paste header block\n",
-    "        template_range = ws.range(template_block_range)\n",
-    "        template_range.copy(ws.range((template_range.row, col_ptr)))\n",
-    "        print(f\"Pasted header block '{header}' at column {col_ptr}\")\n",
-    "        col_ptr += template_range.columns.count + 1\n",
-    "\n",
-    "    # When all header & subheader blocks are done, paste the Check block\n",
-    "    check_template = ws.range(check_block_range)\n",
-    "    check_template.copy(ws.range((check_template.row, col_ptr)))\n",
-    "    print(f\"Pasted Check block at column {col_ptr}\")\n",
-    "\n",
-    "    col_ptr += check_template.columns.count + 1\n",
-    "\n",
-    "    # Finally: delete the **original template check block**\n",
-    "    check_template.columns.delete()\n",
-    "    print(\"Deleted original Check block template columns.\")\n",
-    "\n",
-    "    # Save changes\n",
-    "    wb.save()\n",
-    "    wb.close()\n",
-    "    app.quit()\n",
-    "    print(f\"✅ Dashboard built & saved: {file_path}\")\n",
-    "\n",
-    "\n",
-    "# Example usage:\n",
-    "if __name__ == \"__main__\":\n",
-    "    headers_order = [\"A\", \"B\"]\n",
-    "    subheaders_dict = {\n",
-    "        \"A\": [\"A1\", \"A2\"],\n",
-    "        \"B\": [\"B1\"]\n",
-    "    }\n",
-    "\n",
-    "    build_dashboard_with_check_blocks(\n",
-    "        file_path=\"your_dashboard.xlsx\",\n",
-    "        template_block_range=\"V3:AC20\",  # Example block\n",
-    "        check_block_range=\"AE3:AL20\",    # Example Check block range\n",
-    "        output_sheet_name=\"Dashboard\",\n",
-    "        headers_order=headers_order,\n",
-    "        subheaders_dict=subheaders_dict,\n",
-    "        start_col=22  # Col V is col 22\n",
-    "    )\n"
+    "print(f\"✅ Done! Output saved to: {output_file}\")\n"
    ]
   },
   {
