--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,82 +8,77 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# === Step 1: User input ===\n",
     "current_month = input(\"Enter month (e.g. M06): \")\n",
-    "base_year = 2025  # You can change this if needed\n",
-    "other_year = 2024  # You can change this too\n",
+    "base_year = 2025\n",
+    "other_year = 2024\n",
     "\n",
-    "# === Step 2: Read the Excel file ===\n",
-    "input_file = \"your_input_file.xlsx\"  # Replace with your actual input file\n",
+    "input_file = \"your_input_file.xlsx\"\n",
     "xls = pd.ExcelFile(input_file)\n",
     "\n",
-    "# Pick sheets to process\n",
-    "sheets_to_process = [\"Sheet1\", \"Sheet2\"]  # Replace with actual sheet names\n",
+    "sheets_to_process = [\"Sheet1\", \"Sheet2\"]  # replace\n",
     "sheets_to_copy = [s for s in xls.sheet_names if s not in sheets_to_process]\n",
     "\n",
     "output_sheets = {}\n",
     "\n",
-    "# === Step 3: Process each sheet ===\n",
     "for sheet in sheets_to_process:\n",
     "    print(f\"Processing sheet: {sheet}\")\n",
     "\n",
-    "    df = pd.read_excel(xls, sheet_name=sheet)\n",
+    "    # Read entire sheet with NO header so we can detect it ourselves\n",
+    "    df_raw = pd.read_excel(xls, sheet_name=sheet, header=None)\n",
     "\n",
-    "    # Filter base year and other year\n",
+    "    # Find header row index\n",
+    "    header_row_idx = df_raw.apply(\n",
+    "        lambda row: row.astype(str).str.contains('Account', case=False).any()\n",
+    "        and row.astype(str).str.contains('Entity', case=False).any()\n",
+    "        and row.astype(str).str.contains('Level 4', case=False).any(),\n",
+    "        axis=1\n",
+    "    ).idxmax()\n",
+    "\n",
+    "    print(f\"Detected header at row: {header_row_idx}\")\n",
+    "\n",
+    "    # Extract header and actual data\n",
+    "    header = df_raw.iloc[header_row_idx].tolist()\n",
+    "    df = pd.read_excel(xls, sheet_name=sheet, header=header_row_idx)\n",
+    "\n",
+    "    # Now same processing logic\n",
     "    df_base = df[df['Year'] == base_year].copy()\n",
     "    df_other = df[df['Year'] == other_year].copy()\n",
     "\n",
-    "    # Select needed columns\n",
     "    base_cols = ['Account', 'Entity', 'Level 4', 'YTD'] + [f\"M{str(i).zfill(2)}\" for i in range(1, 13)]\n",
-    "    other_cols = ['Account', 'Entity', 'Level 4', 'YTD', current_month]\n",
-    "\n",
     "    df_base = df_base[['Account', 'Entity', 'Level 4'] + base_cols[3:]]\n",
-    "    df_other = df_other[['Account', 'Entity', 'Level 4'] + other_cols[3:]]\n",
+    "    df_other = df_other[['Account', 'Entity', 'Level 4', 'YTD', current_month]]\n",
     "\n",
-    "    # Aggregate if duplicates exist\n",
     "    df_base = df_base.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
     "    df_other = df_other.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
     "\n",
-    "    # Merge on composite key\n",
     "    df_merged = pd.merge(df_base, df_other, on=['Account', 'Entity', 'Level 4'], how='outer', suffixes=('', f'_{other_year}'))\n",
-    "\n",
-    "    # Fill missing with 0\n",
     "    df_merged.fillna(0, inplace=True)\n",
     "\n",
-    "    # Build columns for final order\n",
-    "    final_cols = ['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD', current_month]\n",
     "    df_final = df_merged[['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD_' + str(other_year), f\"{current_month}_{other_year}\"]]\n",
-    "\n",
-    "    # Rename merged other year columns to remove suffix\n",
     "    df_final.rename(\n",
     "        columns={f'YTD_{other_year}': 'YTD12', f\"{current_month}_{other_year}\": current_month},\n",
     "        inplace=True\n",
     "    )\n",
     "\n",
-    "    # === Build multi-row header ===\n",
     "    year_row = (\n",
-    "        [''] * 3\n",
-    "        + [str(base_year)] * len(base_cols[3:])\n",
-    "        + [str(other_year)] * 2\n",
+    "        [''] * 3 +\n",
+    "        [str(base_year)] * len(base_cols[3:]) +\n",
+    "        [str(other_year)] * 2\n",
     "    )\n",
     "    header_row = ['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD12', current_month]\n",
     "\n",
-    "    # Insert year row as first row\n",
     "    df_final.columns = header_row\n",
-    "    df_final.loc[-1] = year_row  # add year row at index -1\n",
-    "    df_final.index = df_final.index + 1  # shift index\n",
-    "    df_final = df_final.sort_index()  # re-sort\n",
+    "    df_final.loc[-1] = year_row\n",
+    "    df_final.index = df_final.index + 1\n",
+    "    df_final = df_final.sort_index()\n",
     "\n",
-    "    # Save to dict to write later\n",
     "    output_sheets[sheet] = df_final\n",
     "\n",
-    "# === Step 4: Copy unprocessed sheets ===\n",
     "for sheet in sheets_to_copy:\n",
     "    print(f\"Copying sheet as-is: {sheet}\")\n",
     "    df = pd.read_excel(xls, sheet_name=sheet)\n",
     "    output_sheets[sheet] = df\n",
     "\n",
-    "# === Step 5: Write all to final output ===\n",
     "output_file = \"Total PV.xlsx\"\n",
     "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
     "    for sheet_name, df in output_sheets.items():\n",
