--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,25 +8,27 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "current_month = input(\"Enter month (e.g. M06): \")\n",
+    "# === User input ===\n",
+    "current_month = input(\"Enter month (e.g. M06): \")  # still here if you want it later\n",
     "base_year = 2025\n",
     "other_year = 2024\n",
     "\n",
-    "input_file = \"your_input_file.xlsx\"\n",
+    "input_file = \"your_input_file.xlsx\"  # <-- Change this to your input file name\n",
     "xls = pd.ExcelFile(input_file)\n",
     "\n",
-    "sheets_to_process = [\"Sheet1\", \"Sheet2\"]  # replace\n",
+    "# === Auto-detect sheets to process ===\n",
+    "sheets_to_process = [s for s in xls.sheet_names if 'actual' in s.lower()]\n",
     "sheets_to_copy = [s for s in xls.sheet_names if s not in sheets_to_process]\n",
     "\n",
     "output_sheets = {}\n",
     "\n",
+    "# === Process sheets ===\n",
     "for sheet in sheets_to_process:\n",
     "    print(f\"Processing sheet: {sheet}\")\n",
     "\n",
-    "    # Read entire sheet with NO header so we can detect it ourselves\n",
+    "    # Read raw to detect header row\n",
     "    df_raw = pd.read_excel(xls, sheet_name=sheet, header=None)\n",
     "\n",
-    "    # Find header row index\n",
     "    header_row_idx = df_raw.apply(\n",
     "        lambda row: row.astype(str).str.contains('Account', case=False).any()\n",
     "        and row.astype(str).str.contains('Entity', case=False).any()\n",
@@ -34,39 +36,52 @@
     "        axis=1\n",
     "    ).idxmax()\n",
     "\n",
-    "    print(f\"Detected header at row: {header_row_idx}\")\n",
+    "    print(f\"Detected header row at: {header_row_idx}\")\n",
     "\n",
-    "    # Extract header and actual data\n",
-    "    header = df_raw.iloc[header_row_idx].tolist()\n",
+    "    # Read sheet again with correct header\n",
     "    df = pd.read_excel(xls, sheet_name=sheet, header=header_row_idx)\n",
     "\n",
-    "    # Now same processing logic\n",
+    "    # Filter for each year\n",
     "    df_base = df[df['Year'] == base_year].copy()\n",
     "    df_other = df[df['Year'] == other_year].copy()\n",
     "\n",
+    "    # Define base columns (12 months + YTD12)\n",
     "    base_cols = ['Account', 'Entity', 'Level 4', 'YTD'] + [f\"M{str(i).zfill(2)}\" for i in range(1, 13)]\n",
-    "    df_base = df_base[['Account', 'Entity', 'Level 4'] + base_cols[3:]]\n",
-    "    df_other = df_other[['Account', 'Entity', 'Level 4', 'YTD', current_month]]\n",
     "\n",
+    "    # Pick only needed cols\n",
+    "    df_base = df_base[['Account', 'Entity', 'Level 4'] + base_cols[3:]]\n",
+    "    df_other = df_other[['Account', 'Entity', 'Level 4', 'YTD']]\n",
+    "\n",
+    "    # Group by keys to sum duplicates\n",
     "    df_base = df_base.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
     "    df_other = df_other.groupby(['Account', 'Entity', 'Level 4'], as_index=False).sum()\n",
     "\n",
-    "    df_merged = pd.merge(df_base, df_other, on=['Account', 'Entity', 'Level 4'], how='outer', suffixes=('', f'_{other_year}'))\n",
-    "    df_merged.fillna(0, inplace=True)\n",
+    "    # Merge on keys\n",
+    "    df_merged = pd.merge(\n",
+    "        df_base,\n",
+    "        df_other,\n",
+    "        on=['Account', 'Entity', 'Level 4'],\n",
+    "        how='outer',\n",
+    "        suffixes=('', f'_{other_year}')\n",
+    "    ).fillna(0)\n",
     "\n",
-    "    df_final = df_merged[['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD_' + str(other_year), f\"{current_month}_{other_year}\"]]\n",
-    "    df_final.rename(\n",
-    "        columns={f'YTD_{other_year}': 'YTD12', f\"{current_month}_{other_year}\": current_month},\n",
-    "        inplace=True\n",
-    "    )\n",
+    "    # Safeguard for missing column\n",
+    "    if f'YTD_{other_year}' not in df_merged.columns:\n",
+    "        df_merged[f'YTD_{other_year}'] = 0\n",
     "\n",
+    "    # Build final columns\n",
+    "    df_final = df_merged[['Account', 'Entity', 'Level 4'] + base_cols[3:] + [f'YTD_{other_year}']]\n",
+    "    df_final.rename(columns={f'YTD_{other_year}': 'YTD12'}, inplace=True)\n",
+    "\n",
+    "    # Build multi-row header\n",
     "    year_row = (\n",
     "        [''] * 3 +\n",
     "        [str(base_year)] * len(base_cols[3:]) +\n",
-    "        [str(other_year)] * 2\n",
+    "        [str(other_year)]\n",
     "    )\n",
-    "    header_row = ['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD12', current_month]\n",
+    "    header_row = ['Account', 'Entity', 'Level 4'] + base_cols[3:] + ['YTD12']\n",
     "\n",
+    "    # Insert year row on top\n",
     "    df_final.columns = header_row\n",
     "    df_final.loc[-1] = year_row\n",
     "    df_final.index = df_final.index + 1\n",
@@ -74,17 +89,25 @@
     "\n",
     "    output_sheets[sheet] = df_final\n",
     "\n",
+    "# === Copy unprocessed sheets ===\n",
     "for sheet in sheets_to_copy:\n",
-    "    print(f\"Copying sheet as-is: {sheet}\")\n",
+    "    print(f\"Copying unprocessed sheet: {sheet}\")\n",
     "    df = pd.read_excel(xls, sheet_name=sheet)\n",
     "    output_sheets[sheet] = df\n",
     "\n",
+    "# === Write to final output ===\n",
     "output_file = \"Total PV.xlsx\"\n",
+    "\n",
     "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
     "    for sheet_name, df in output_sheets.items():\n",
-    "        df.to_excel(writer, index=False, header=False if sheet_name in sheets_to_process else True, sheet_name=sheet_name)\n",
+    "        df.to_excel(\n",
+    "            writer,\n",
+    "            index=False,\n",
+    "            header=False if sheet_name in sheets_to_process else True,\n",
+    "            sheet_name=sheet_name\n",
+    "        )\n",
     "\n",
-    "print(f\"✅ Done! Output saved to: {output_file}\")\n"
+    "print(f\"✅ Done! Final file saved as: {output_file}\")\n"
    ]
   },
   {
